Fixed UI bug where the whole body would shift over left caused by padding being unintentially added when theme menu opened

--- a/app/globals.css
+++ b/app/globals.css
@@ -139,3 +139,7 @@
     --chart-5: 340 75% 55%;
   }
 }
+
+body[data-scroll-locked]{
+  min-width: 100%;
+}
